--- a/src/components/select/select.component.sass
+++ b/src/components/select/select.component.sass
@@ -22,6 +22,7 @@
     align-items: center
     width: 673px
     height: 68px
+    margin: 0 auto
     background: rgba(255, 255, 255, 0.15)
     backdrop-filter: blur(35px)
     border: 1.5px solid rgba(255, 255, 255, 0.15)
