--- a/src/sass/sprite/svg/sprite.scss
+++ b/src/sass/sprite/svg/sprite.scss
@@ -14,7 +14,7 @@
 
 .svg-iconArrowsUp {
 	@extend %svg-common;
-	background-position: 99.66329966329967% 20.491803278688526%;
+	background-position: 99.33993399339934% 75.99609375%;
 }
 
 .svg-iconArrowsUp-box {
@@ -24,7 +24,7 @@
 
 .svg-iconCart {
 	@extend %svg-common;
-	background-position: 98.66666666666667% 77.04918032786885%;
+	background-position: 16.33986928104575% 98.6796875%;
 }
 
 .svg-iconCart-box {
@@ -34,7 +34,7 @@
 
 .svg-iconChat {
 	@extend %svg-common;
-	background-position: 0 18.669456066945607%;
+	background-position: 0 17.776892430278885%;
 }
 
 .svg-iconChat-box {
@@ -44,7 +44,7 @@
 
 .svg-iconChatGray {
 	@extend %svg-common;
-	background-position: 17.627118644067796% 0;
+	background-position: 17.27574750830565% 0;
 }
 
 .svg-iconChatGray-box {
@@ -54,7 +54,7 @@
 
 .svg-iconChipGray {
 	@extend %svg-common;
-	background-position: 35.25423728813559% 0;
+	background-position: 34.5514950166113% 0;
 }
 
 .svg-iconChipGray-box {
@@ -64,7 +64,7 @@
 
 .svg-iconChipWhite {
 	@extend %svg-common;
-	background-position: 0 40.42677824267783%;
+	background-position: 0 38.49402390438247%;
 }
 
 .svg-iconChipWhite-box {
@@ -74,7 +74,7 @@
 
 .svg-iconEmailGray {
 	@extend %svg-common;
-	background-position: 80.52805280528052% 61.41732283464567%;
+	background-position: 33.65695792880259% 19.548872180451127%;
 }
 
 .svg-iconEmailGray-box {
@@ -84,7 +84,7 @@
 
 .svg-iconEmailGray2 {
 	@extend %svg-common;
-	background-position: 99.66329966329967% 40.24896265560166%;
+	background-position: 0 99.8498023715415%;
 }
 
 .svg-iconEmailGray2-box {
@@ -94,7 +94,7 @@
 
 .svg-iconEmalPurple {
 	@extend %svg-common;
-	background-position: 17.627118644067796% 39.567549858716575%;
+	background-position: 17.27574750830565% 37.71419649478902%;
 }
 
 .svg-iconEmalPurple-box {
@@ -102,9 +102,19 @@
 	height: 46.81px;
 }
 
+.svg-iconErrors {
+	@extend %svg-common;
+	background-position: 34.5514950166113% 37.455419444875176%;
+}
+
+.svg-iconErrors-box {
+	width: 52px;
+	height: 45.04px;
+}
+
 .svg-iconFacebookGray {
 	@extend %svg-common;
-	background-position: 11.987381703470032% 99.45669291338582%;
+	background-position: 63.77708978328173% 94.96992481203007%;
 }
 
 .svg-iconFacebookGray-box {
@@ -114,7 +124,7 @@
 
 .svg-iconFacebookWhite {
 	@extend %svg-common;
-	background-position: 78.48101265822785% 79.61111111111111%;
+	background-position: 42.546583850931675% 95.68939393939394%;
 }
 
 .svg-iconFacebookWhite-box {
@@ -124,7 +134,7 @@
 
 .svg-iconFreeShipping {
 	@extend %svg-common;
-	background-position: 35.25423728813559% 39.24451665312754%;
+	background-position: 51.82724252491694% 0;
 }
 
 .svg-iconFreeShipping-box {
@@ -132,9 +142,19 @@
 	height: 44.8px;
 }
 
+.svg-iconFuel {
+	@extend %svg-common;
+	background-position: 50.94875730755413% 17.84860557768924%;
+}
+
+.svg-iconFuel-box {
+	width: 46.81px;
+	height: 52px;
+}
+
 .svg-iconHybrEng {
 	@extend %svg-common;
-	background-position: 35.25423728813559% 20.768431983385256%;
+	background-position: 51.82724252491694% 36.89305587316107%;
 }
 
 .svg-iconHybrEng-box {
@@ -144,7 +164,7 @@
 
 .svg-iconInstagramGray {
 	@extend %svg-common;
-	background-position: 0 99.8498023715415%;
+	background-position: 53.333333333333336% 95.32830188679246%;
 }
 
 .svg-iconInstagramGray-box {
@@ -154,7 +174,7 @@
 
 .svg-iconInstagramWhite {
 	@extend %svg-common;
-	background-position: 67.75244299674267% 79.92828685258964%;
+	background-position: 30.990415335463258% 96.0532319391635%;
 }
 
 .svg-iconInstagramWhite-box {
@@ -164,7 +184,7 @@
 
 .svg-iconMarkLocationGray {
 	@extend %svg-common;
-	background-position: 66.12377850162866% 21.13821138211382%;
+	background-position: 66.45367412140575% 20.155038759689923%;
 }
 
 .svg-iconMarkLocationGray-box {
@@ -174,7 +194,7 @@
 
 .svg-iconMarkLocationGray2 {
 	@extend %svg-common;
-	background-position: 52% 0;
+	background-position: 0 59.211155378486055%;
 }
 
 .svg-iconMarkLocationGray2-box {
@@ -184,7 +204,7 @@
 
 .svg-iconMarkLocationPurple {
 	@extend %svg-common;
-	background-position: 51.75846051758461% 21.757322175732217%;
+	background-position: 15.289525048796358% 59.211155378486055%;
 }
 
 .svg-iconMarkLocationPurple-box {
@@ -194,7 +214,7 @@
 
 .svg-iconMarkMapPurple {
 	@extend %svg-common;
-	background-position: 0 62.18410041841004%;
+	background-position: 29.994817310183983% 59.211155378486055%;
 }
 
 .svg-iconMarkMapPurple-box {
@@ -204,7 +224,7 @@
 
 .svg-iconMarker {
 	@extend %svg-common;
-	background-position: 99.32885906040268% 58.8%;
+	background-position: 81.90789473684211% 59.541984732824424%;
 }
 
 .svg-iconMarker-box {
@@ -214,7 +234,7 @@
 
 .svg-iconPatent {
 	@extend %svg-common;
-	background-position: 14.879532242346851% 62.18410041841004%;
+	background-position: 45.087124081820875% 59.211155378486055%;
 }
 
 .svg-iconPatent-box {
@@ -224,7 +244,7 @@
 
 .svg-iconPhoneGray {
 	@extend %svg-common;
-	background-position: 65.48387096774194% 39.43089430894309%;
+	background-position: 65.82278481012658% 37.5968992248062%;
 }
 
 .svg-iconPhoneGray-box {
@@ -234,7 +254,7 @@
 
 .svg-iconPhoneGray2 {
 	@extend %svg-common;
-	background-position: 30.61764705882353% 62.18410041841004%;
+	background-position: 66.66666666666667% 0;
 }
 
 .svg-iconPhoneGray2-box {
@@ -244,7 +264,7 @@
 
 .svg-iconPhonePurple {
 	@extend %svg-common;
-	background-position: 45.657627118644065% 62.18410041841004%;
+	background-position: 82.72425249169436% 0;
 }
 
 .svg-iconPhonePurple-box {
@@ -254,7 +274,7 @@
 
 .svg-iconPhoneWhite {
 	@extend %svg-common;
-	background-position: 66.33986928104575% 0;
+	background-position: 79.8076923076923% 20.717131474103585%;
 }
 
 .svg-iconPhoneWhite-box {
@@ -264,7 +284,7 @@
 
 .svg-iconPinion {
 	@extend %svg-common;
-	background-position: 82.71186440677967% 0;
+	background-position: 82.72425249169436% 41.43426294820717%;
 }
 
 .svg-iconPinion-box {
@@ -272,9 +292,19 @@
 	height: 52px;
 }
 
+.svg-iconPower {
+	@extend %svg-common;
+	background-position: 0 79.92828685258964%;
+}
+
+.svg-iconPower-box {
+	width: 52px;
+	height: 52px;
+}
+
 .svg-iconReturnCircle {
 	@extend %svg-common;
-	background-position: 82.71186440677967% 21.757322175732217%;
+	background-position: 17.27574750830565% 79.92828685258964%;
 }
 
 .svg-iconReturnCircle-box {
@@ -284,7 +314,7 @@
 
 .svg-iconRudder {
 	@extend %svg-common;
-	background-position: 100% 0;
+	background-position: 99.66887417218543% 57.13438735177866%;
 }
 
 .svg-iconRudder-box {
@@ -294,7 +324,7 @@
 
 .svg-iconSearch {
 	@extend %svg-common;
-	background-position: 66.33986928104575% 56.8%;
+	background-position: 66.66666666666667% 54.19847328244275%;
 }
 
 .svg-iconSearch-box {
@@ -304,7 +334,7 @@
 
 .svg-iconShield {
 	@extend %svg-common;
-	background-position: 82.15488215488216% 43.51464435146443%;
+	background-position: 34.32343234323432% 79.92828685258964%;
 }
 
 .svg-iconShield-box {
@@ -314,7 +344,7 @@
 
 .svg-iconSpeed {
 	@extend %svg-common;
-	background-position: 0 83.94142259414225%;
+	background-position: 51.16279069767442% 79.92828685258964%;
 }
 
 .svg-iconSpeed-box {
@@ -324,7 +354,7 @@
 
 .svg-iconSpeedometer {
 	@extend %svg-common;
-	background-position: 17.627118644067796% 83.94142259414225%;
+	background-position: 68.43853820598007% 79.92828685258964%;
 }
 
 .svg-iconSpeedometer-box {
@@ -334,7 +364,7 @@
 
 .svg-iconSpeedometerGray {
 	@extend %svg-common;
-	background-position: 35.25423728813559% 83.94142259414225%;
+	background-position: 100% 0;
 }
 
 .svg-iconSpeedometerGray-box {
@@ -342,9 +372,19 @@
 	height: 52px;
 }
 
+.svg-iconSpeedometrLight {
+	@extend %svg-common;
+	background-position: 100% 20.202020202020204%;
+}
+
+.svg-iconSpeedometrLight-box {
+	width: 52px;
+	height: 45.6px;
+}
+
 .svg-iconWheel {
 	@extend %svg-common;
-	background-position: 52.88135593220339% 82.20446629788977%;
+	background-position: 100% 38.117555165006834%;
 }
 
 .svg-iconWheel-box {
@@ -354,7 +394,7 @@
 
 .svg-iconYoutubeGray {
 	@extend %svg-common;
-	background-position: 17.049180327868854% 20.392156862745097%;
+	background-position: 82.95819935691318% 75.13857677902622%;
 }
 
 .svg-iconYoutubeGray-box {
@@ -364,7 +404,7 @@
 
 .svg-iconYoutubeWhite {
 	@extend %svg-common;
-	background-position: 51.48514851485149% 41.10671936758893%;
+	background-position: 16.828478964401295% 19.62264150943396%;
 }
 
 .svg-iconYoutubeWhite-box {
