--- a/src/components/header/header.component.pug
+++ b/src/components/header/header.component.pug
@@ -7,7 +7,7 @@ header.header
             .headerNav
                 nav.headerNavLinks
                     a.headerLink(href="rs/rs.html") RS chip 
-                    a.headerLink(href="javascript:void(0)") GTR Chip 
+                    a.headerLink(href="gtr/gtr.html") GTR Chip 
                     a.headerLink(href="chip/chip.html") Gas pedal 
                     a.headerLink(href="javascript:void(0)") Tuning 
                     a.headerLink(href="javascript:void(0)") Support 
