--- a/src/components/productBlocks/productChip/optimizeBlockChip.component.sass
+++ b/src/components/productBlocks/productChip/optimizeBlockChip.component.sass
@@ -34,6 +34,12 @@
 .optimizeBlockTextDescription
     margin-top: 11%
     padding-left: 6%
+    +sm-block
+        margin-top: 4%
+    +md-block
+        margin-top: 4%
+    +lg-block
+        margin-top: 4%
 
 .optimizeRowFlex
     +row-flex
