--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -1876,6 +1876,12 @@ html
 .optimizeBlockTextDescription
     margin-top: 11%
     padding-left: 6%
+    +sm-block
+        margin-top: 4%
+    +md-block
+        margin-top: 4%
+    +lg-block
+        margin-top: 4%
 
 .optimizeRowFlex
     +row-flex
@@ -2330,6 +2336,8 @@ html
         width: 70%
         margin: 0 auto
 
+.accomplishments
+    
 /*howitwork*/
 .howitwork
     padding: 84px 0
