--- a/src/pages/gtr/gtr.pug
+++ b/src/pages/gtr/gtr.pug
@@ -12,6 +12,7 @@ block content
 	main.page.pageRs
 		//- include ../../components/banner/bannerRs.component.pug
 		include ../../components/productBlocks/productGTR/productAdvantagesGTR.component.pug
+		include ../../components/productBlocks/productGTR/accomplishments.component.pug
 		include ../../components/productBlocks/productChip/productSliderChip.component.pug
 		include ../../components/faq/faq.component.pug
 block modals
