--- a/src/components/productBlocks/productGTR/accomplishments.component.sass
+++ b/src/components/productBlocks/productGTR/accomplishments.component.sass
@@ -5,10 +5,20 @@
         text-align: center
     .page__title-h3
         text-align: center
-        font-size: 36px
-        line-height: 59px
+        font-size: 24px
+        line-height: 30px
         margin-top: 10px
         margin-bottom: 3%
+
+        +sm-block
+            font-size: 36px
+            line-height: 59px
+        +md-block
+            font-size: 36px
+            line-height: 59px
+        +lg-block
+            font-size: 36px
+            line-height: 59px
     &::before, 
     &::after
         content: ''
@@ -30,13 +40,23 @@
             height: 497px
     &::before
         bottom: 0
-        left: 20%
+        +sm-block
+            left: -25%
+        +md-block
+            left: -20%
+        +lg-block
+            left: -20%
         
         // bottom: -68%
        
     &::after
         top: 43%
-        right: -53%
+        +sm-block
+            right: -85%
+        +md-block
+            right: -53%
+        +lg-block
+            right: -53%
 
 .accomplishmentsRowFlex 
     +row-flex
@@ -45,6 +65,7 @@
 .accomplishmentsItem
     +col
     +size(9)
+    +size-sm(5)
     +size-md(3.6)
     +size-lg(3.6)
 
@@ -53,23 +74,41 @@
     margin-bottom: 3%
     &:nth-child(odd)
         .accomplishmentsItemImg
-            justify-content: flex-end
-            padding-right: 50px
+            +md-block
+                justify-content: flex-end
+                padding-right: 50px
+            +lg-block
+                justify-content: flex-end
+                padding-right: 50px
     &:nth-child(even)
         .accomplishmentsItemImg
-            justify-content: flex-start
-            padding-left: 50px
+            +md-block
+                justify-content: flex-start
+                padding-left: 50px
+            +lg-block
+                justify-content: flex-start
+                padding-left: 50px
 
 .accomplishmentsItemImg
     display: flex
     margin-bottom: 50px
-    
+    justify-content: center
         
 .accomplishmentsItemTitle
     font-family: #{$SFUIDisplay}-Bold
     margin-bottom: 16px
-    font-size: 24px
-    line-height: 52px
+
+    font-size: 18px
+    line-height: 26px
+    +sm-block
+        font-size: 24px
+        line-height: 52px
+    +md-block
+        font-size: 24px
+        line-height: 52px
+    +lg-block
+        font-size: 24px
+        line-height: 52px
 
 .accomplishmentsItemDescription
     color: #B2B2B2
