--- a/src/pages/gtr/gtr.pug
+++ b/src/pages/gtr/gtr.pug
@@ -11,10 +11,14 @@ block append style
 block content
 	main.page.pageRs
 		//- include ../../components/banner/bannerRs.component.pug
-		include ../../components/productBlocks/productGTR/productAdvantagesGTR.component.pug
-		include ../../components/productBlocks/productGTR/accomplishments.component.pug
-		include ../../components/productBlocks/productChip/productSliderChip.component.pug
-		include ../../components/faq/faq.component.pug
+		//- include ../../components/productBlocks/productGTR/productAdvantagesGTR.component.pug
+		//- include ../../components/productBlocks/productGTR/accomplishments.component.pug
+		include ../../components/productBlocks/productGTR/appBlock.component.pug
+		include ../../components/productBlocks/productGTR/steps.component.pug
+		include ../../components/productBlocks/performance.component.pug
+		include ../../components/select/select.component.pug
+		//- include ../../components/productBlocks/productChip/productSliderChip.component.pug
+		//- include ../../components/faq/faq.component.pug
 block modals
 	
 block append style
