--- a/src/sass/sprite/svg/sprite.scss
+++ b/src/sass/sprite/svg/sprite.scss
@@ -14,7 +14,7 @@
 
 .svg-iconArrowsUp {
 	@extend %svg-common;
-	background-position: 99.33993399339934% 75.99609375%;
+	background-position: 99.38135593220339% 33.20205479452055%;
 }
 
 .svg-iconArrowsUp-box {
@@ -22,9 +22,19 @@
 	height: 47px;
 }
 
+.svg-iconCar {
+	@extend %svg-common;
+	background-position: 14.772727272727273% 0;
+}
+
+.svg-iconCar-box {
+	width: 52px;
+	height: 44.35px;
+}
+
 .svg-iconCart {
 	@extend %svg-common;
-	background-position: 16.33986928104575% 98.6796875%;
+	background-position: 98.54621848739495% 80.46232876712328%;
 }
 
 .svg-iconCart-box {
@@ -34,7 +44,7 @@
 
 .svg-iconChat {
 	@extend %svg-common;
-	background-position: 0 17.776892430278885%;
+	background-position: 0 15.547038327526133%;
 }
 
 .svg-iconChat-box {
@@ -44,7 +54,7 @@
 
 .svg-iconChatGray {
 	@extend %svg-common;
-	background-position: 17.27574750830565% 0;
+	background-position: 14.772727272727273% 15.547038327526133%;
 }
 
 .svg-iconChatGray-box {
@@ -52,9 +62,19 @@
 	height: 52px;
 }
 
+.svg-iconChip {
+	@extend %svg-common;
+	background-position: 29.545454545454547% 0;
+}
+
+.svg-iconChip-box {
+	width: 52px;
+	height: 43.04px;
+}
+
 .svg-iconChipGray {
 	@extend %svg-common;
-	background-position: 34.5514950166113% 0;
+	background-position: 29.545454545454547% 14.996515679442508%;
 }
 
 .svg-iconChipGray-box {
@@ -64,7 +84,7 @@
 
 .svg-iconChipWhite {
 	@extend %svg-common;
-	background-position: 0 38.49402390438247%;
+	background-position: 0 33.66550522648084%;
 }
 
 .svg-iconChipWhite-box {
@@ -72,9 +92,49 @@
 	height: 52px;
 }
 
+.svg-iconCloud {
+	@extend %svg-common;
+	background-position: 14.772727272727273% 33.34253571675064%;
+}
+
+.svg-iconCloud-box {
+	width: 52px;
+	height: 49.22px;
+}
+
+.svg-iconCompareChart {
+	@extend %svg-common;
+	background-position: 44.31818181818182% 0;
+}
+
+.svg-iconCompareChart-box {
+	width: 52px;
+	height: 50.22px;
+}
+
+.svg-iconDesktop {
+	@extend %svg-common;
+	background-position: 44.31818181818182% 17.279108175061932%;
+}
+
+.svg-iconDesktop-box {
+	width: 52px;
+	height: 48.36px;
+}
+
+.svg-iconDynoChart {
+	@extend %svg-common;
+	background-position: 44.31818181818182% 33.92758810572687%;
+}
+
+.svg-iconDynoChart-box {
+	width: 52px;
+	height: 48.44px;
+}
+
 .svg-iconEmailGray {
 	@extend %svg-common;
-	background-position: 33.65695792880259% 19.548872180451127%;
+	background-position: 83.83611111111111% 32.11920529801324%;
 }
 
 .svg-iconEmailGray-box {
@@ -84,7 +144,7 @@
 
 .svg-iconEmailGray2 {
 	@extend %svg-common;
-	background-position: 0 99.8498023715415%;
+	background-position: 99.38135593220339% 49.80968858131487%;
 }
 
 .svg-iconEmailGray2-box {
@@ -94,7 +154,7 @@
 
 .svg-iconEmalPurple {
 	@extend %svg-common;
-	background-position: 17.27574750830565% 37.71419649478902%;
+	background-position: 29.545454545454547% 33.06752455593963%;
 }
 
 .svg-iconEmalPurple-box {
@@ -104,7 +164,7 @@
 
 .svg-iconErrors {
 	@extend %svg-common;
-	background-position: 34.5514950166113% 37.455419444875176%;
+	background-position: 0 50.557899033882165%;
 }
 
 .svg-iconErrors-box {
@@ -114,7 +174,7 @@
 
 .svg-iconFacebookGray {
 	@extend %svg-common;
-	background-position: 63.77708978328173% 94.96992481203007%;
+	background-position: 80.69786096256685% 82.45033112582782%;
 }
 
 .svg-iconFacebookGray-box {
@@ -124,7 +184,7 @@
 
 .svg-iconFacebookWhite {
 	@extend %svg-common;
-	background-position: 42.546583850931675% 95.68939393939394%;
+	background-position: 55.76407506702413% 48%;
 }
 
 .svg-iconFacebookWhite-box {
@@ -134,7 +194,7 @@
 
 .svg-iconFreeShipping {
 	@extend %svg-common;
-	background-position: 51.82724252491694% 0;
+	background-position: 14.772727272727273% 50.51665533650578%;
 }
 
 .svg-iconFreeShipping-box {
@@ -144,7 +204,7 @@
 
 .svg-iconFuel {
 	@extend %svg-common;
-	background-position: 50.94875730755413% 17.84860557768924%;
+	background-position: 58.23231333463983% 0;
 }
 
 .svg-iconFuel-box {
@@ -154,7 +214,7 @@
 
 .svg-iconHybrEng {
 	@extend %svg-common;
-	background-position: 51.82724252491694% 36.89305587316107%;
+	background-position: 29.545454545454547% 49.8089684295194%;
 }
 
 .svg-iconHybrEng-box {
@@ -164,7 +224,7 @@
 
 .svg-iconInstagramGray {
 	@extend %svg-common;
-	background-position: 53.333333333333336% 95.32830188679246%;
+	background-position: 14.207650273224044% 64.33887043189368%;
 }
 
 .svg-iconInstagramGray-box {
@@ -174,7 +234,7 @@
 
 .svg-iconInstagramWhite {
 	@extend %svg-common;
-	background-position: 30.990415335463258% 96.0532319391635%;
+	background-position: 57.142857142857146% 34.78260869565217%;
 }
 
 .svg-iconInstagramWhite-box {
@@ -182,9 +242,19 @@
 	height: 40px;
 }
 
+.svg-iconKeyboard {
+	@extend %svg-common;
+	background-position: 0 64.91469178426576%;
+}
+
+.svg-iconKeyboard-box {
+	width: 52px;
+	height: 40.67px;
+}
+
 .svg-iconMarkLocationGray {
 	@extend %svg-common;
-	background-position: 66.45367412140575% 20.155038759689923%;
+	background-position: 96.6510989010989% 95.90136054421768%;
 }
 
 .svg-iconMarkLocationGray-box {
@@ -194,7 +264,7 @@
 
 .svg-iconMarkLocationGray2 {
 	@extend %svg-common;
-	background-position: 0 59.211155378486055%;
+	background-position: 71.37535014005603% 0;
 }
 
 .svg-iconMarkLocationGray2-box {
@@ -204,7 +274,7 @@
 
 .svg-iconMarkLocationPurple {
 	@extend %svg-common;
-	background-position: 15.289525048796358% 59.211155378486055%;
+	background-position: 71.09654017857143% 18.118466898954704%;
 }
 
 .svg-iconMarkLocationPurple-box {
@@ -214,7 +284,7 @@
 
 .svg-iconMarkMapPurple {
 	@extend %svg-common;
-	background-position: 29.994817310183983% 59.211155378486055%;
+	background-position: 70.83564994996108% 36.23693379790941%;
 }
 
 .svg-iconMarkMapPurple-box {
@@ -224,7 +294,7 @@
 
 .svg-iconMarker {
 	@extend %svg-common;
-	background-position: 81.90789473684211% 59.541984732824424%;
+	background-position: 99.10140845070423% 65.08389261744966%;
 }
 
 .svg-iconMarker-box {
@@ -234,7 +304,7 @@
 
 .svg-iconPatent {
 	@extend %svg-common;
-	background-position: 45.087124081820875% 59.211155378486055%;
+	background-position: 0 81.64808362369338%;
 }
 
 .svg-iconPatent-box {
@@ -244,7 +314,7 @@
 
 .svg-iconPhoneGray {
 	@extend %svg-common;
-	background-position: 65.82278481012658% 37.5968992248062%;
+	background-position: 82.23705722070845% 17.687074829931973%;
 }
 
 .svg-iconPhoneGray-box {
@@ -254,7 +324,7 @@
 
 .svg-iconPhoneGray2 {
 	@extend %svg-common;
-	background-position: 66.66666666666667% 0;
+	background-position: 70.19559228650138% 54.35540069686411%;
 }
 
 .svg-iconPhoneGray2-box {
@@ -264,7 +334,7 @@
 
 .svg-iconPhonePurple {
 	@extend %svg-common;
-	background-position: 82.72425249169436% 0;
+	background-position: 14.036931818181818% 81.64808362369338%;
 }
 
 .svg-iconPhonePurple-box {
@@ -274,7 +344,7 @@
 
 .svg-iconPhoneWhite {
 	@extend %svg-common;
-	background-position: 79.8076923076923% 20.717131474103585%;
+	background-position: 57.30027548209367% 18.118466898954704%;
 }
 
 .svg-iconPhoneWhite-box {
@@ -284,7 +354,7 @@
 
 .svg-iconPinion {
 	@extend %svg-common;
-	background-position: 82.72425249169436% 41.43426294820717%;
+	background-position: 28.80965909090909% 81.64808362369338%;
 }
 
 .svg-iconPinion-box {
@@ -294,7 +364,7 @@
 
 .svg-iconPower {
 	@extend %svg-common;
-	background-position: 0 79.92828685258964%;
+	background-position: 43.58238636363637% 81.64808362369338%;
 }
 
 .svg-iconPower-box {
@@ -304,7 +374,7 @@
 
 .svg-iconReturnCircle {
 	@extend %svg-common;
-	background-position: 17.27574750830565% 79.92828685258964%;
+	background-position: 58.35511363636363% 81.64808362369338%;
 }
 
 .svg-iconReturnCircle-box {
@@ -314,7 +384,7 @@
 
 .svg-iconRudder {
 	@extend %svg-common;
-	background-position: 99.66887417218543% 57.13438735177866%;
+	background-position: 99.66288951841359% 16.24567474048443%;
 }
 
 .svg-iconRudder-box {
@@ -324,7 +394,7 @@
 
 .svg-iconSearch {
 	@extend %svg-common;
-	background-position: 66.66666666666667% 54.19847328244275%;
+	background-position: 83.14325068870524% 69.79865771812081%;
 }
 
 .svg-iconSearch-box {
@@ -334,7 +404,7 @@
 
 .svg-iconShield {
 	@extend %svg-common;
-	background-position: 34.32343234323432% 79.92828685258964%;
+	background-position: 85.25706214689265% 0;
 }
 
 .svg-iconShield-box {
@@ -344,7 +414,7 @@
 
 .svg-iconSpeed {
 	@extend %svg-common;
-	background-position: 51.16279069767442% 79.92828685258964%;
+	background-position: 0 99.76655052264809%;
 }
 
 .svg-iconSpeed-box {
@@ -354,7 +424,7 @@
 
 .svg-iconSpeedometer {
 	@extend %svg-common;
-	background-position: 68.43853820598007% 79.92828685258964%;
+	background-position: 14.772727272727273% 99.76655052264809%;
 }
 
 .svg-iconSpeedometer-box {
@@ -364,7 +434,7 @@
 
 .svg-iconSpeedometerGray {
 	@extend %svg-common;
-	background-position: 100% 0;
+	background-position: 29.545454545454547% 99.76655052264809%;
 }
 
 .svg-iconSpeedometerGray-box {
@@ -374,7 +444,7 @@
 
 .svg-iconSpeedometrLight {
 	@extend %svg-common;
-	background-position: 100% 20.202020202020204%;
+	background-position: 44.31818181818182% 97.59032038173143%;
 }
 
 .svg-iconSpeedometrLight-box {
@@ -382,9 +452,19 @@
 	height: 45.6px;
 }
 
+.svg-iconUnlimit {
+	@extend %svg-common;
+	background-position: 44.31818181818182% 49.04950495049505%;
+}
+
+.svg-iconUnlimit-box {
+	width: 52px;
+	height: 36px;
+}
+
 .svg-iconWheel {
 	@extend %svg-common;
-	background-position: 100% 38.117555165006834%;
+	background-position: 99.94602272727273% 0;
 }
 
 .svg-iconWheel-box {
@@ -394,7 +474,7 @@
 
 .svg-iconYoutubeGray {
 	@extend %svg-common;
-	background-position: 82.95819935691318% 75.13857677902622%;
+	background-position: 83.37292817679558% 56.76567656765677%;
 }
 
 .svg-iconYoutubeGray-box {
@@ -404,7 +484,7 @@
 
 .svg-iconYoutubeWhite {
 	@extend %svg-common;
-	background-position: 16.828478964401295% 19.62264150943396%;
+	background-position: 83.83611111111111% 44.51827242524917%;
 }
 
 .svg-iconYoutubeWhite-box {
