--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -1141,6 +1141,102 @@ html
     font-size: 18px
     line-height: 178%
     letter-spacing: 0.06em
+.performance
+    .page__title-h3
+        font-size: 36px
+        line-height: 59px
+        margin-top: 10px
+.performanceTable
+    padding-top: 38px
+    &__Header
+        display: flex
+        
+        color: #B2B2B2
+        margin-bottom: 16px
+
+        .performanceTableItemTd
+            font-size: 14px
+            line-height: 29px
+            
+    &__Body
+        display: flex
+        flex-wrap: wrap
+
+.performanceTableItemTd
+    +col
+    +size(9/2)
+    +size-sm(2)
+    +size-md(2)
+    +size-lg(2)
+
+    text-align: center
+
+    &:nth-child(1)
+        +size-sm(3)
+        +size-md(3)
+        +size-lg(3)
+        text-align: left
+        div
+            width: auto
+    div
+       
+        margin: 0 auto
+        height: 48px
+        +sm-block
+            width: 80%
+        +md-block
+            width: 60%
+        +lg-block
+            width: 60%
+        
+
+.performanceTableItem 
+    display: flex
+    flex-wrap: wrap
+    align-items: center
+
+    padding: 8px 11px
+    margin-bottom: 20px
+
+    width: 100%
+
+    border: 1px solid #474747
+    box-sizing: border-box
+    border-radius: 15px
+    
+    &:last-child
+        margin-bottom: 0
+        
+    .stock 
+        font-family: #{$SFUIDisplay}-Bold
+        font-size: 15px
+        line-height: 59px
+
+    .carName
+        
+        color: #B2B2B2
+        font-size: 15px
+        line-height: 26px
+    div
+        font-family: #{$SFUIDisplay}-Bold
+        font-size: 18px
+        line-height: 50px
+
+       
+
+    &.withRs
+        .performanceTableItemTd:nth-child(1)
+            div
+                background: none
+
+        div > div
+            background: linear-gradient(90deg, rgba(113, 15, 209, 0.9) 0%, rgba(255, 56, 57, 0.9) 100%);
+            mix-blend-mode: normal
+            border-radius: 8px
+
+.performanceImg
+    display: flex
+    justify-content: center
 /*product*/
 .product
     background: #111111
@@ -1495,6 +1591,129 @@ html
         margin-top: 13%
         margin-top: 45px
   
+.setps
+    .page__title-h2_small
+        text-align: center
+        
+    .page__title-h3
+        font-family: #{$SFUIDisplay}-Bold
+        text-align: center
+        font-weight: 800
+
+        font-size: 24px
+        line-height: 30px
+
+        margin-bottom: 32px
+        
+        +sm-block
+            width: 75%
+            margin: 8px auto 50px
+            font-size: 36px
+            line-height: 59px
+        +md-block
+            margin: 8px auto 60px
+            width: 48%
+            font-size: 36px
+            line-height: 59px
+        +lg-block
+            margin: 8px auto 60px
+            width: 48%
+            font-size: 36px
+            line-height: 59px
+    &.productGTR  
+        .page__title-h3
+            +sm-block
+                margin: 8px auto 50px
+            +md-block
+                margin: 8px auto 100px
+            +lg-block
+                margin: 8px auto 100px
+
+.stepsItems
+    +row-flex
+    flex-direction: column
+    align-items: center
+
+    +md-block
+        flex-direction: row
+        align-items: flex-start
+    +lg-block
+        flex-direction: row
+        align-items: flex-start
+
+.stepsItem
+    +col
+    +size(9)
+    +size-sm(9/2)
+    +size-md(3)
+    +size-lg(3)
+
+    margin-bottom: 8%
+    
+    &__Img
+        background: #FFFFFF
+        box-shadow: -15px 25px 30px rgba(0, 0, 0, 0.1)
+        border-radius: 15px
+        display: flex
+        justify-content: center
+        align-items: flex-end
+        overflow: hidden
+        margin-bottom: 24px
+
+        img
+            object-fit: cover
+    &__Title
+        font-family: #{$SFUIDisplay}-Bold
+        font-size: 24px
+        line-height: 52px
+        margin-bottom: 16px
+        text-align: center
+
+    &__Description
+        color: #B2B2B2
+        font-size: 15px
+        line-height: 26px
+        text-align: center
+        width: 70%
+        margin: 0 auto
+
+.stepsItemGTR
+    +col
+    +size(9)
+    +size-sm(6)
+    +size-md(3)
+    +size-lg(3)
+
+    margin-bottom: 8%
+    background: #111111
+    border-radius: 15px
+    position: relative
+    padding: 2% 4%
+    &__Icon
+        position: absolute
+        right: 9%
+        top: -26%
+
+        width: 87px
+        height: 87px
+        border-radius: 100%
+        display: flex
+        align-items: center
+        justify-content: center
+        background: linear-gradient(90deg, rgba(113, 15, 209, 0.9) 0%, rgba(255, 56, 57, 0.9) 100%)
+        mix-blend-mode: normal
+    &__Title
+        font-family: #{$SFUIDisplay}-Bold
+        font-size: 24px
+        line-height: 52px
+        margin-bottom: 16px
+        margin-top: 2%
+    &__Description
+        color: #B2B2B2
+        font-size: 15px
+        line-height: 26px
+        margin-bottom: 3%
+
 /*productRsSlider*/
 /*products*/
 .products
@@ -1976,102 +2195,6 @@ html
     +lg-block
         display: block
    
-.performance
-    .page__title-h3
-        font-size: 36px
-        line-height: 59px
-        margin-top: 10px
-.performanceTable
-    padding-top: 38px
-    &__Header
-        display: flex
-        
-        color: #B2B2B2
-        margin-bottom: 16px
-
-        .performanceTableItemTd
-            font-size: 14px
-            line-height: 29px
-            
-    &__Body
-        display: flex
-        flex-wrap: wrap
-
-.performanceTableItemTd
-    +col
-    +size(9/2)
-    +size-sm(2)
-    +size-md(2)
-    +size-lg(2)
-
-    text-align: center
-
-    &:nth-child(1)
-        +size-sm(3)
-        +size-md(3)
-        +size-lg(3)
-        text-align: left
-        div
-            width: auto
-    div
-       
-        margin: 0 auto
-        height: 48px
-        +sm-block
-            width: 80%
-        +md-block
-            width: 60%
-        +lg-block
-            width: 60%
-        
-
-.performanceTableItem 
-    display: flex
-    flex-wrap: wrap
-    align-items: center
-
-    padding: 8px 11px
-    margin-bottom: 20px
-
-    width: 100%
-
-    border: 1px solid #474747
-    box-sizing: border-box
-    border-radius: 15px
-    
-    &:last-child
-        margin-bottom: 0
-        
-    .stock 
-        font-family: #{$SFUIDisplay}-Bold
-        font-size: 15px
-        line-height: 59px
-
-    .carName
-        
-        color: #B2B2B2
-        font-size: 15px
-        line-height: 26px
-    div
-        font-family: #{$SFUIDisplay}-Bold
-        font-size: 18px
-        line-height: 50px
-
-       
-
-    &.withRs
-        .performanceTableItemTd:nth-child(1)
-            div
-                background: none
-
-        div > div
-            background: linear-gradient(90deg, rgba(113, 15, 209, 0.9) 0%, rgba(255, 56, 57, 0.9) 100%);
-            mix-blend-mode: normal
-            border-radius: 8px
-
-.performanceImg
-    display: flex
-    justify-content: center
 .power
     padding: 100px 0
 
@@ -2258,84 +2381,6 @@ html
         span
             background: #54CA52
 
-.setps
-    .page__title-h2_small
-        text-align: center
-        
-    .page__title-h3
-        font-family: #{$SFUIDisplay}-Bold
-        text-align: center
-        font-weight: 800
-
-        font-size: 24px
-        line-height: 30px
-
-        margin-bottom: 32px
-        
-        +sm-block
-            width: 75%
-            margin: 8px auto 50px
-            font-size: 36px
-            line-height: 59px
-        +md-block
-            margin: 8px auto 60px
-            width: 48%
-            font-size: 36px
-            line-height: 59px
-        +lg-block
-            margin: 8px auto 60px
-            width: 48%
-            font-size: 36px
-            line-height: 59px
-
-.stepsItems
-    +row-flex
-    flex-direction: column
-    align-items: center
-
-    +md-block
-        flex-direction: row
-        align-items: flex-start
-    +lg-block
-        flex-direction: row
-        align-items: flex-start
-
-.stepsItem
-    +col
-    +size(9)
-    +size-sm(9/2)
-    +size-md(3)
-    +size-lg(3)
-
-    margin-bottom: 8%
-    
-    &__Img
-        background: #FFFFFF
-        box-shadow: -15px 25px 30px rgba(0, 0, 0, 0.1)
-        border-radius: 15px
-        display: flex
-        justify-content: center
-        align-items: flex-end
-        overflow: hidden
-        margin-bottom: 24px
-
-        img
-            object-fit: cover
-    &__Title
-        font-family: #{$SFUIDisplay}-Bold
-        font-size: 24px
-        line-height: 52px
-        margin-bottom: 16px
-        text-align: center
-
-    &__Description
-        color: #B2B2B2
-        font-size: 15px
-        line-height: 26px
-        text-align: center
-        width: 70%
-        margin: 0 auto
-
 .accomplishments
     padding: 60px 0
     position: relative
@@ -2453,6 +2498,52 @@ html
     font-size: 15px
     line-height: 26px
     letter-spacing: 0.02em
+.appBlock
+    padding: 60px 0 150px
+    .page__title-h3
+        font-size: 36px
+        line-height: 59px
+        margin-top: 2%
+
+.appBlockRowFlex
+    +row-flex
+
+.appBlockContainer
+    position: relative
+    display: flex
+    border-radius: 15px
+    background: #111111
+    backdrop-filter: blur(35px)
+    padding: 20% 5% 2% 8%
+    +sm-block
+        padding: 12% 5%
+    +md-block
+        padding: 6% 5%
+    +lg-block
+        padding: 6% 5%
+.appBlockText
+    +col
+    +size(9)
+    +size-md(4)
+    +size-lg(4)
+
+.appBlockIcons 
+    display: flex
+
+.appBlockDescription
+    margin-top: 32px
+    margin-bottom: 37px
+.appBlockIconsItem 
+    display: flex
+    font-size: 15px
+    line-height: 22px
+    font-family: #{$SFUIDisplay}-Bold
+.appBlockImg
+    position: absolute
+    right: -66px
+    top: -105px
+.appBlockIcon
+    margin-right: 20px
 /*howitwork*/
 .howitwork
     padding: 84px 0
