--- a/src/pages/gtr/gtr.pug
+++ b/src/pages/gtr/gtr.pug
@@ -17,6 +17,7 @@ block content
 		include ../../components/productBlocks/productGTR/steps.component.pug
 		include ../../components/productBlocks/performance.component.pug
 		include ../../components/select/select.component.pug
+		include ../../components/productBlocks/productGTR/carSelector.component.pug
 		//- include ../../components/productBlocks/productChip/productSliderChip.component.pug
 		//- include ../../components/faq/faq.component.pug
 block modals
