--- a/src/sass/sprite/svg/sprite.scss
+++ b/src/sass/sprite/svg/sprite.scss
@@ -4,17 +4,17 @@
 
 .svg-iconArrowsLR {
 	@extend %svg-common;
-	background-position: 0 0;
+	background-position: 0 55.55555555555556%;
 }
 
 .svg-iconArrowsLR-box {
-	width: 52px;
-	height: 44.62px;
+	width: 59px;
+	height: 50px;
 }
 
 .svg-iconArrowsUp {
 	@extend %svg-common;
-	background-position: 99.38135593220339% 33.20205479452055%;
+	background-position: 28.871391076115486% 55.05952380952381%;
 }
 
 .svg-iconArrowsUp-box {
@@ -24,17 +24,17 @@
 
 .svg-iconCar {
 	@extend %svg-common;
-	background-position: 14.772727272727273% 0;
+	background-position: 36.71232876712329% 15.548780487804878%;
 }
 
 .svg-iconCar-box {
-	width: 52px;
-	height: 44.35px;
+	width: 66px;
+	height: 55px;
 }
 
 .svg-iconCart {
 	@extend %svg-common;
-	background-position: 98.54621848739495% 80.46232876712328%;
+	background-position: 99.21875% 27.083333333333332%;
 }
 
 .svg-iconCart-box {
@@ -44,7 +44,7 @@
 
 .svg-iconChat {
 	@extend %svg-common;
-	background-position: 0 15.547038327526133%;
+	background-position: 43.79947229551451% 70.99697885196375%;
 }
 
 .svg-iconChat-box {
@@ -54,87 +54,87 @@
 
 .svg-iconChatGray {
 	@extend %svg-common;
-	background-position: 14.772727272727273% 15.547038327526133%;
+	background-position: 85.97883597883597% 66.36363636363636%;
 }
 
 .svg-iconChatGray-box {
-	width: 52px;
-	height: 52px;
+	width: 53px;
+	height: 53px;
 }
 
 .svg-iconChip {
 	@extend %svg-common;
-	background-position: 29.545454545454547% 0;
+	background-position: 17.72853185595568% 0;
 }
 
 .svg-iconChip-box {
-	width: 52px;
-	height: 43.04px;
+	width: 70px;
+	height: 56px;
 }
 
 .svg-iconChipGray {
 	@extend %svg-common;
-	background-position: 29.545454545454547% 14.996515679442508%;
+	background-position: 0 88.48484848484848%;
 }
 
 .svg-iconChipGray-box {
-	width: 52px;
-	height: 52px;
+	width: 53px;
+	height: 53px;
 }
 
 .svg-iconChipWhite {
 	@extend %svg-common;
-	background-position: 0 33.66550522648084%;
+	background-position: 71.50537634408602% 0;
 }
 
 .svg-iconChipWhite-box {
-	width: 52px;
-	height: 52px;
+	width: 59px;
+	height: 59px;
 }
 
 .svg-iconCloud {
 	@extend %svg-common;
-	background-position: 14.772727272727273% 33.34253571675064%;
+	background-position: 0 38.3177570093458%;
 }
 
 .svg-iconCloud-box {
-	width: 52px;
-	height: 49.22px;
+	width: 66px;
+	height: 62px;
 }
 
 .svg-iconCompareChart {
 	@extend %svg-common;
-	background-position: 44.31818181818182% 0;
+	background-position: 14.4% 71.42857142857143%;
 }
 
 .svg-iconCompareChart-box {
-	width: 52px;
-	height: 50.22px;
+	width: 56px;
+	height: 54px;
 }
 
 .svg-iconDesktop {
 	@extend %svg-common;
-	background-position: 44.31818181818182% 17.279108175061932%;
+	background-position: 55.0408719346049% 0;
 }
 
 .svg-iconDesktop-box {
-	width: 52px;
-	height: 48.36px;
+	width: 64px;
+	height: 59px;
 }
 
 .svg-iconDynoChart {
 	@extend %svg-common;
-	background-position: 44.31818181818182% 33.92758810572687%;
+	background-position: 29.333333333333332% 70.99697885196375%;
 }
 
 .svg-iconDynoChart-box {
-	width: 52px;
-	height: 48.44px;
+	width: 56px;
+	height: 52px;
 }
 
 .svg-iconEmailGray {
 	@extend %svg-common;
-	background-position: 83.83611111111111% 32.11920529801324%;
+	background-position: 98.44961240310077% 65.89595375722543%;
 }
 
 .svg-iconEmailGray-box {
@@ -144,7 +144,7 @@
 
 .svg-iconEmailGray2 {
 	@extend %svg-common;
-	background-position: 99.38135593220339% 49.80968858131487%;
+	background-position: 100% 0;
 }
 
 .svg-iconEmailGray2-box {
@@ -154,27 +154,27 @@
 
 .svg-iconEmalPurple {
 	@extend %svg-common;
-	background-position: 29.545454545454547% 33.06752455593963%;
+	background-position: 71.12299465240642% 33.433734939759034%;
 }
 
 .svg-iconEmalPurple-box {
-	width: 52px;
-	height: 46.81px;
+	width: 57px;
+	height: 51px;
 }
 
 .svg-iconErrors {
 	@extend %svg-common;
-	background-position: 0 50.557899033882165%;
+	background-position: 18.08219178082192% 37.61467889908257%;
 }
 
 .svg-iconErrors-box {
-	width: 52px;
-	height: 45.04px;
+	width: 66px;
+	height: 56px;
 }
 
 .svg-iconFacebookGray {
 	@extend %svg-common;
-	background-position: 80.69786096256685% 82.45033112582782%;
+	background-position: 57.605985037406484% 53.46820809248555%;
 }
 
 .svg-iconFacebookGray-box {
@@ -184,7 +184,7 @@
 
 .svg-iconFacebookWhite {
 	@extend %svg-common;
-	background-position: 55.76407506702413% 48%;
+	background-position: 50% 53.77906976744186%;
 }
 
 .svg-iconFacebookWhite-box {
@@ -194,37 +194,37 @@
 
 .svg-iconFreeShipping {
 	@extend %svg-common;
-	background-position: 14.772727272727273% 50.51665533650578%;
+	background-position: 54.44743935309973% 17.771084337349397%;
 }
 
 .svg-iconFreeShipping-box {
-	width: 52px;
-	height: 44.8px;
+	width: 60px;
+	height: 51px;
 }
 
 .svg-iconFuel {
 	@extend %svg-common;
-	background-position: 58.23231333463983% 0;
+	background-position: 70% 49.693251533742334%;
 }
 
 .svg-iconFuel-box {
-	width: 46.81px;
-	height: 52px;
+	width: 51px;
+	height: 57px;
 }
 
 .svg-iconHybrEng {
 	@extend %svg-common;
-	background-position: 29.545454545454547% 49.8089684295194%;
+	background-position: 36.0655737704918% 36.82634730538922%;
 }
 
 .svg-iconHybrEng-box {
-	width: 52px;
-	height: 40.62px;
+	width: 65px;
+	height: 49px;
 }
 
 .svg-iconInstagramGray {
 	@extend %svg-common;
-	background-position: 14.207650273224044% 64.33887043189368%;
+	background-position: 0 100%;
 }
 
 .svg-iconInstagramGray-box {
@@ -234,7 +234,7 @@
 
 .svg-iconInstagramWhite {
 	@extend %svg-common;
-	background-position: 57.142857142857146% 34.78260869565217%;
+	background-position: 40.92071611253197% 53.93586005830904%;
 }
 
 .svg-iconInstagramWhite-box {
@@ -244,17 +244,17 @@
 
 .svg-iconKeyboard {
 	@extend %svg-common;
-	background-position: 0 64.91469178426576%;
+	background-position: 36.91460055096419% 0;
 }
 
 .svg-iconKeyboard-box {
-	width: 52px;
-	height: 40.67px;
+	width: 68px;
+	height: 51px;
 }
 
 .svg-iconMarkLocationGray {
 	@extend %svg-common;
-	background-position: 96.6510989010989% 95.90136054421768%;
+	background-position: 97.44245524296676% 40.828402366863905%;
 }
 
 .svg-iconMarkLocationGray-box {
@@ -264,7 +264,7 @@
 
 .svg-iconMarkLocationGray2 {
 	@extend %svg-common;
-	background-position: 71.37535014005603% 0;
+	background-position: 56.770833333333336% 70.99697885196375%;
 }
 
 .svg-iconMarkLocationGray2-box {
@@ -274,27 +274,27 @@
 
 .svg-iconMarkLocationPurple {
 	@extend %svg-common;
-	background-position: 71.09654017857143% 18.118466898954704%;
+	background-position: 84.85639686684073% 17.073170731707318%;
 }
 
 .svg-iconMarkLocationPurple-box {
-	width: 45.6px;
-	height: 52px;
+	width: 48px;
+	height: 55px;
 }
 
 .svg-iconMarkMapPurple {
 	@extend %svg-common;
-	background-position: 70.83564994996108% 36.23693379790941%;
+	background-position: 0 0;
 }
 
 .svg-iconMarkMapPurple-box {
-	width: 44.28px;
-	height: 52px;
+	width: 64px;
+	height: 78px;
 }
 
 .svg-iconMarker {
 	@extend %svg-common;
-	background-position: 99.10140845070423% 65.08389261744966%;
+	background-position: 99.73821989528795% 14.619883040935672%;
 }
 
 .svg-iconMarker-box {
@@ -304,17 +304,17 @@
 
 .svg-iconPatent {
 	@extend %svg-common;
-	background-position: 0 81.64808362369338%;
+	background-position: 0 72.08588957055214%;
 }
 
 .svg-iconPatent-box {
-	width: 49.41px;
-	height: 52px;
+	width: 54px;
+	height: 57px;
 }
 
 .svg-iconPhoneGray {
 	@extend %svg-common;
-	background-position: 82.23705722070845% 17.687074829931973%;
+	background-position: 96.7005076142132% 54.142011834319526%;
 }
 
 .svg-iconPhoneGray-box {
@@ -324,7 +324,7 @@
 
 .svg-iconPhoneGray2 {
 	@extend %svg-common;
-	background-position: 70.19559228650138% 54.35540069686411%;
+	background-position: 67.94871794871794% 70.99697885196375%;
 }
 
 .svg-iconPhoneGray2-box {
@@ -334,17 +334,17 @@
 
 .svg-iconPhonePurple {
 	@extend %svg-common;
-	background-position: 14.036931818181818% 81.64808362369338%;
+	background-position: 86.66666666666667% 0;
 }
 
 .svg-iconPhonePurple-box {
-	width: 52px;
-	height: 52px;
+	width: 56px;
+	height: 56px;
 }
 
 .svg-iconPhoneWhite {
 	@extend %svg-common;
-	background-position: 57.30027548209367% 18.118466898954704%;
+	background-position: 13.58974358974359% 88.21752265861028%;
 }
 
 .svg-iconPhoneWhite-box {
@@ -354,27 +354,27 @@
 
 .svg-iconPinion {
 	@extend %svg-common;
-	background-position: 28.80965909090909% 81.64808362369338%;
+	background-position: 86.20689655172414% 33.73860182370821%;
 }
 
 .svg-iconPinion-box {
-	width: 52px;
-	height: 52px;
+	width: 54px;
+	height: 54px;
 }
 
 .svg-iconPower {
 	@extend %svg-common;
-	background-position: 43.58238636363637% 81.64808362369338%;
+	background-position: 86.20689655172414% 50.151975683890576%;
 }
 
 .svg-iconPower-box {
-	width: 52px;
-	height: 52px;
+	width: 54px;
+	height: 54px;
 }
 
 .svg-iconReturnCircle {
 	@extend %svg-common;
-	background-position: 58.35511363636363% 81.64808362369338%;
+	background-position: 24.80211081794195% 88.21752265861028%;
 }
 
 .svg-iconReturnCircle-box {
@@ -384,7 +384,7 @@
 
 .svg-iconRudder {
 	@extend %svg-common;
-	background-position: 99.66288951841359% 16.24567474048443%;
+	background-position: 15.526315789473685% 55.55555555555556%;
 }
 
 .svg-iconRudder-box {
@@ -394,7 +394,7 @@
 
 .svg-iconSearch {
 	@extend %svg-common;
-	background-position: 83.14325068870524% 69.79865771812081%;
+	background-position: 17.94871794871795% 22.80701754385965%;
 }
 
 .svg-iconSearch-box {
@@ -404,7 +404,7 @@
 
 .svg-iconShield {
 	@extend %svg-common;
-	background-position: 85.25706214689265% 0;
+	background-position: 38.32020997375328% 88.21752265861028%;
 }
 
 .svg-iconShield-box {
@@ -414,7 +414,7 @@
 
 .svg-iconSpeed {
 	@extend %svg-common;
-	background-position: 0 99.76655052264809%;
+	background-position: 51.715039577836414% 88.21752265861028%;
 }
 
 .svg-iconSpeed-box {
@@ -424,7 +424,7 @@
 
 .svg-iconSpeedometer {
 	@extend %svg-common;
-	background-position: 14.772727272727273% 99.76655052264809%;
+	background-position: 65.4353562005277% 88.21752265861028%;
 }
 
 .svg-iconSpeedometer-box {
@@ -434,7 +434,7 @@
 
 .svg-iconSpeedometerGray {
 	@extend %svg-common;
-	background-position: 29.545454545454547% 99.76655052264809%;
+	background-position: 79.15567282321899% 88.21752265861028%;
 }
 
 .svg-iconSpeedometerGray-box {
@@ -444,37 +444,37 @@
 
 .svg-iconSpeedometrLight {
 	@extend %svg-common;
-	background-position: 44.31818181818182% 97.59032038173143%;
+	background-position: 54.44743935309973% 33.23262839879154%;
 }
 
 .svg-iconSpeedometrLight-box {
-	width: 52px;
-	height: 45.6px;
+	width: 60px;
+	height: 52px;
 }
 
 .svg-iconUnlimit {
 	@extend %svg-common;
-	background-position: 44.31818181818182% 49.04950495049505%;
+	background-position: 0 23.076923076923077%;
 }
 
 .svg-iconUnlimit-box {
-	width: 52px;
-	height: 36px;
+	width: 70px;
+	height: 45px;
 }
 
 .svg-iconWheel {
 	@extend %svg-common;
-	background-position: 99.94602272727273% 0;
+	background-position: 71.31367292225201% 17.82477341389728%;
 }
 
 .svg-iconWheel-box {
-	width: 52px;
-	height: 46.95px;
+	width: 58px;
+	height: 52px;
 }
 
 .svg-iconYoutubeGray {
 	@extend %svg-common;
-	background-position: 83.37292817679558% 56.76567656765677%;
+	background-position: 97.94344473007712% 87.31988472622479%;
 }
 
 .svg-iconYoutubeGray-box {
@@ -484,7 +484,7 @@
 
 .svg-iconYoutubeWhite {
 	@extend %svg-common;
-	background-position: 83.83611111111111% 44.51827242524917%;
+	background-position: 98.44961240310077% 76.81159420289855%;
 }
 
 .svg-iconYoutubeWhite-box {
