--- a/src/components/productBlocks/productGTR/carSelector.component.pug
+++ b/src/components/productBlocks/productGTR/carSelector.component.pug
@@ -7,7 +7,7 @@ section.carSelector
                 .carSelectorIcons
                     .carSelectorIconsItem 
                         .carSelectorIconsItem__Icon 
-                            .svg-iconUnlimit.svg-iconUnlimit-box
+                            .iconUnlimitGray
                         .carSelectorIconsItem__Text Unlimited use. Buy once use on any out of over 8000 supported cars
                     
                     .carSelectorIconsItem 
