--- a/src/sass/styles-sprites.sass
+++ b/src/sass/styles-sprites.sass
@@ -67,6 +67,8 @@
 .icon-arrow-right-black
     +sprite($icon-arrow-left-black-png)
     transform: rotate(180deg)
+.iconUnlimitGray
+    +sprite($icon-unlimit-png)
 
 //FIXME: cascad for modal 
 .modalGallary .icon-close
