--- a/src/sass/sprite/png/spritePNG.sass
+++ b/src/sass/sprite/png/spritePNG.sass
@@ -15,10 +15,10 @@ $icon-fb-png-offset-x: -212px
 $icon-fb-png-offset-y: -90px
 $icon-fb-png-width: 40px
 $icon-fb-png-height: 40px
-$icon-fb-png-total-width: 275px
-$icon-fb-png-total-height: 245px
+$icon-fb-png-total-width: 290px
+$icon-fb-png-total-height: 237px
 $icon-fb-png-image: '../assets/icons/png/spritePNG.png'
-$icon-fb-png: (212px, 90px, -212px, -90px, 40px, 40px, 275px, 245px, '../assets/icons/png/spritePNG.png', 'icon-fb-png', )
+$icon-fb-png: (212px, 90px, -212px, -90px, 40px, 40px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'icon-fb-png', )
 $icon-tw-png-name: 'icon-tw-png'
 $icon-tw-png-x: 212px
 $icon-tw-png-y: 130px
@@ -26,10 +26,10 @@ $icon-tw-png-offset-x: -212px
 $icon-tw-png-offset-y: -130px
 $icon-tw-png-width: 40px
 $icon-tw-png-height: 40px
-$icon-tw-png-total-width: 275px
-$icon-tw-png-total-height: 245px
+$icon-tw-png-total-width: 290px
+$icon-tw-png-total-height: 237px
 $icon-tw-png-image: '../assets/icons/png/spritePNG.png'
-$icon-tw-png: (212px, 130px, -212px, -130px, 40px, 40px, 275px, 245px, '../assets/icons/png/spritePNG.png', 'icon-tw-png', )
+$icon-tw-png: (212px, 130px, -212px, -130px, 40px, 40px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'icon-tw-png', )
 $icon-arrow-left-black-png-name: 'iconArrowLeftBlack-png'
 $icon-arrow-left-black-png-x: 212px
 $icon-arrow-left-black-png-y: 0px
@@ -37,10 +37,10 @@ $icon-arrow-left-black-png-offset-x: -212px
 $icon-arrow-left-black-png-offset-y: 0px
 $icon-arrow-left-black-png-width: 45px
 $icon-arrow-left-black-png-height: 45px
-$icon-arrow-left-black-png-total-width: 275px
-$icon-arrow-left-black-png-total-height: 245px
+$icon-arrow-left-black-png-total-width: 290px
+$icon-arrow-left-black-png-total-height: 237px
 $icon-arrow-left-black-png-image: '../assets/icons/png/spritePNG.png'
-$icon-arrow-left-black-png: (212px, 0px, -212px, 0px, 45px, 45px, 275px, 245px, '../assets/icons/png/spritePNG.png', 'iconArrowLeftBlack-png', )
+$icon-arrow-left-black-png: (212px, 0px, -212px, 0px, 45px, 45px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconArrowLeftBlack-png', )
 $icon-arrow-left-white-png-name: 'iconArrowLeftWhite-png'
 $icon-arrow-left-white-png-x: 212px
 $icon-arrow-left-white-png-y: 45px
@@ -48,32 +48,32 @@ $icon-arrow-left-white-png-offset-x: -212px
 $icon-arrow-left-white-png-offset-y: -45px
 $icon-arrow-left-white-png-width: 45px
 $icon-arrow-left-white-png-height: 45px
-$icon-arrow-left-white-png-total-width: 275px
-$icon-arrow-left-white-png-total-height: 245px
+$icon-arrow-left-white-png-total-width: 290px
+$icon-arrow-left-white-png-total-height: 237px
 $icon-arrow-left-white-png-image: '../assets/icons/png/spritePNG.png'
-$icon-arrow-left-white-png: (212px, 45px, -212px, -45px, 45px, 45px, 275px, 245px, '../assets/icons/png/spritePNG.png', 'iconArrowLeftWhite-png', )
+$icon-arrow-left-white-png: (212px, 45px, -212px, -45px, 45px, 45px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconArrowLeftWhite-png', )
 $icon-arrow-white-details-png-name: 'iconArrowWhiteDetails-png'
-$icon-arrow-white-details-png-x: 257px
-$icon-arrow-white-details-png-y: 51px
-$icon-arrow-white-details-png-offset-x: -257px
-$icon-arrow-white-details-png-offset-y: -51px
+$icon-arrow-white-details-png-x: 277px
+$icon-arrow-white-details-png-y: 168px
+$icon-arrow-white-details-png-offset-x: -277px
+$icon-arrow-white-details-png-offset-y: -168px
 $icon-arrow-white-details-png-width: 11px
 $icon-arrow-white-details-png-height: 8px
-$icon-arrow-white-details-png-total-width: 275px
-$icon-arrow-white-details-png-total-height: 245px
+$icon-arrow-white-details-png-total-width: 290px
+$icon-arrow-white-details-png-total-height: 237px
 $icon-arrow-white-details-png-image: '../assets/icons/png/spritePNG.png'
-$icon-arrow-white-details-png: (257px, 51px, -257px, -51px, 11px, 8px, 275px, 245px, '../assets/icons/png/spritePNG.png', 'iconArrowWhiteDetails-png', )
+$icon-arrow-white-details-png: (277px, 168px, -277px, -168px, 11px, 8px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconArrowWhiteDetails-png', )
 $icon-cart-png-name: 'iconCart-png'
-$icon-cart-png-x: 123px
-$icon-cart-png-y: 212px
-$icon-cart-png-offset-x: -123px
-$icon-cart-png-offset-y: -212px
+$icon-cart-png-x: 257px
+$icon-cart-png-y: 124px
+$icon-cart-png-offset-x: -257px
+$icon-cart-png-offset-y: -124px
 $icon-cart-png-width: 27px
 $icon-cart-png-height: 27px
-$icon-cart-png-total-width: 275px
-$icon-cart-png-total-height: 245px
+$icon-cart-png-total-width: 290px
+$icon-cart-png-total-height: 237px
 $icon-cart-png-image: '../assets/icons/png/spritePNG.png'
-$icon-cart-png: (123px, 212px, -123px, -212px, 27px, 27px, 275px, 245px, '../assets/icons/png/spritePNG.png', 'iconCart-png', )
+$icon-cart-png: (257px, 124px, -257px, -124px, 27px, 27px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconCart-png', )
 $icon-chat-png-name: 'iconChat-png'
 $icon-chat-png-x: 0px
 $icon-chat-png-y: 0px
@@ -81,43 +81,43 @@ $icon-chat-png-offset-x: 0px
 $icon-chat-png-offset-y: 0px
 $icon-chat-png-width: 212px
 $icon-chat-png-height: 212px
-$icon-chat-png-total-width: 275px
-$icon-chat-png-total-height: 245px
+$icon-chat-png-total-width: 290px
+$icon-chat-png-total-height: 237px
 $icon-chat-png-image: '../assets/icons/png/spritePNG.png'
-$icon-chat-png: (0px, 0px, 0px, 0px, 212px, 212px, 275px, 245px, '../assets/icons/png/spritePNG.png', 'iconChat-png', )
+$icon-chat-png: (0px, 0px, 0px, 0px, 212px, 212px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconChat-png', )
 $icon-close-png-name: 'iconClose-png'
-$icon-close-png-x: 95px
-$icon-close-png-y: 212px
-$icon-close-png-offset-x: -95px
-$icon-close-png-offset-y: -212px
+$icon-close-png-x: 257px
+$icon-close-png-y: 97px
+$icon-close-png-offset-x: -257px
+$icon-close-png-offset-y: -97px
 $icon-close-png-width: 28px
 $icon-close-png-height: 27px
-$icon-close-png-total-width: 275px
-$icon-close-png-total-height: 245px
+$icon-close-png-total-width: 290px
+$icon-close-png-total-height: 237px
 $icon-close-png-image: '../assets/icons/png/spritePNG.png'
-$icon-close-png: (95px, 212px, -95px, -212px, 28px, 27px, 275px, 245px, '../assets/icons/png/spritePNG.png', 'iconClose-png', )
+$icon-close-png: (257px, 97px, -257px, -97px, 28px, 27px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconClose-png', )
 $icon-close-red-png-name: 'iconCloseRed-png'
-$icon-close-red-png-x: 257px
-$icon-close-red-png-y: 18px
-$icon-close-red-png-offset-x: -257px
-$icon-close-red-png-offset-y: -18px
+$icon-close-red-png-x: 274px
+$icon-close-red-png-y: 176px
+$icon-close-red-png-offset-x: -274px
+$icon-close-red-png-offset-y: -176px
 $icon-close-red-png-width: 16px
 $icon-close-red-png-height: 16px
-$icon-close-red-png-total-width: 275px
-$icon-close-red-png-total-height: 245px
+$icon-close-red-png-total-width: 290px
+$icon-close-red-png-total-height: 237px
 $icon-close-red-png-image: '../assets/icons/png/spritePNG.png'
-$icon-close-red-png: (257px, 18px, -257px, -18px, 16px, 16px, 275px, 245px, '../assets/icons/png/spritePNG.png', 'iconCloseRed-png', )
+$icon-close-red-png: (274px, 176px, -274px, -176px, 16px, 16px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconCloseRed-png', )
 $icon-facebook-png-name: 'iconFacebook-png'
-$icon-facebook-png-x: 257px
-$icon-facebook-png-y: 34px
-$icon-facebook-png-offset-x: -257px
-$icon-facebook-png-offset-y: -34px
+$icon-facebook-png-x: 277px
+$icon-facebook-png-y: 151px
+$icon-facebook-png-offset-x: -277px
+$icon-facebook-png-offset-y: -151px
 $icon-facebook-png-width: 10px
 $icon-facebook-png-height: 17px
-$icon-facebook-png-total-width: 275px
-$icon-facebook-png-total-height: 245px
+$icon-facebook-png-total-width: 290px
+$icon-facebook-png-total-height: 237px
 $icon-facebook-png-image: '../assets/icons/png/spritePNG.png'
-$icon-facebook-png: (257px, 34px, -257px, -34px, 10px, 17px, 275px, 245px, '../assets/icons/png/spritePNG.png', 'iconFacebook-png', )
+$icon-facebook-png: (277px, 151px, -277px, -151px, 10px, 17px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconFacebook-png', )
 $icon-free-png-name: 'iconFree-png'
 $icon-free-png-x: 212px
 $icon-free-png-y: 170px
@@ -125,103 +125,114 @@ $icon-free-png-offset-x: -212px
 $icon-free-png-offset-y: -170px
 $icon-free-png-width: 40px
 $icon-free-png-height: 31px
-$icon-free-png-total-width: 275px
-$icon-free-png-total-height: 245px
+$icon-free-png-total-width: 290px
+$icon-free-png-total-height: 237px
 $icon-free-png-image: '../assets/icons/png/spritePNG.png'
-$icon-free-png: (212px, 170px, -212px, -170px, 40px, 31px, 275px, 245px, '../assets/icons/png/spritePNG.png', 'iconFree-png', )
+$icon-free-png: (212px, 170px, -212px, -170px, 40px, 31px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconFree-png', )
 $icon-info-png-name: 'iconInfo-png'
-$icon-info-png-x: 0px
-$icon-info-png-y: 212px
-$icon-info-png-offset-x: 0px
-$icon-info-png-offset-y: -212px
+$icon-info-png-x: 257px
+$icon-info-png-y: 0px
+$icon-info-png-offset-x: -257px
+$icon-info-png-offset-y: 0px
 $icon-info-png-width: 33px
 $icon-info-png-height: 33px
-$icon-info-png-total-width: 275px
-$icon-info-png-total-height: 245px
+$icon-info-png-total-width: 290px
+$icon-info-png-total-height: 237px
 $icon-info-png-image: '../assets/icons/png/spritePNG.png'
-$icon-info-png: (0px, 212px, 0px, -212px, 33px, 33px, 275px, 245px, '../assets/icons/png/spritePNG.png', 'iconInfo-png', )
+$icon-info-png: (257px, 0px, -257px, 0px, 33px, 33px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconInfo-png', )
 $icon-instagram-png-name: 'iconInstagram-png'
-$icon-instagram-png-x: 257px
-$icon-instagram-png-y: 0px
-$icon-instagram-png-offset-x: -257px
-$icon-instagram-png-offset-y: 0px
+$icon-instagram-png-x: 50px
+$icon-instagram-png-y: 212px
+$icon-instagram-png-offset-x: -50px
+$icon-instagram-png-offset-y: -212px
 $icon-instagram-png-width: 18px
 $icon-instagram-png-height: 18px
-$icon-instagram-png-total-width: 275px
-$icon-instagram-png-total-height: 245px
+$icon-instagram-png-total-width: 290px
+$icon-instagram-png-total-height: 237px
 $icon-instagram-png-image: '../assets/icons/png/spritePNG.png'
-$icon-instagram-png: (257px, 0px, -257px, 0px, 18px, 18px, 275px, 245px, '../assets/icons/png/spritePNG.png', 'iconInstagram-png', )
+$icon-instagram-png: (50px, 212px, -50px, -212px, 18px, 18px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconInstagram-png', )
 $icon-lifetime-png-name: 'iconLifetime-png'
-$icon-lifetime-png-x: 65px
-$icon-lifetime-png-y: 212px
-$icon-lifetime-png-offset-x: -65px
-$icon-lifetime-png-offset-y: -212px
+$icon-lifetime-png-x: 257px
+$icon-lifetime-png-y: 65px
+$icon-lifetime-png-offset-x: -257px
+$icon-lifetime-png-offset-y: -65px
 $icon-lifetime-png-width: 30px
 $icon-lifetime-png-height: 32px
-$icon-lifetime-png-total-width: 275px
-$icon-lifetime-png-total-height: 245px
+$icon-lifetime-png-total-width: 290px
+$icon-lifetime-png-total-height: 237px
 $icon-lifetime-png-image: '../assets/icons/png/spritePNG.png'
-$icon-lifetime-png: (65px, 212px, -65px, -212px, 30px, 32px, 275px, 245px, '../assets/icons/png/spritePNG.png', 'iconLifetime-png', )
+$icon-lifetime-png: (257px, 65px, -257px, -65px, 30px, 32px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconLifetime-png', )
 $icon-location-png-name: 'iconLocation-png'
-$icon-location-png-x: 150px
-$icon-location-png-y: 212px
-$icon-location-png-offset-x: -150px
-$icon-location-png-offset-y: -212px
+$icon-location-png-x: 257px
+$icon-location-png-y: 151px
+$icon-location-png-offset-x: -257px
+$icon-location-png-offset-y: -151px
 $icon-location-png-width: 20px
 $icon-location-png-height: 25px
-$icon-location-png-total-width: 275px
-$icon-location-png-total-height: 245px
+$icon-location-png-total-width: 290px
+$icon-location-png-total-height: 237px
 $icon-location-png-image: '../assets/icons/png/spritePNG.png'
-$icon-location-png: (150px, 212px, -150px, -212px, 20px, 25px, 275px, 245px, '../assets/icons/png/spritePNG.png', 'iconLocation-png', )
+$icon-location-png: (257px, 151px, -257px, -151px, 20px, 25px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconLocation-png', )
 $icon-mail-png-name: 'iconMail-png'
-$icon-mail-png-x: 187px
-$icon-mail-png-y: 212px
-$icon-mail-png-offset-x: -187px
-$icon-mail-png-offset-y: -212px
+$icon-mail-png-x: 257px
+$icon-mail-png-y: 201px
+$icon-mail-png-offset-x: -257px
+$icon-mail-png-offset-y: -201px
 $icon-mail-png-width: 24px
 $icon-mail-png-height: 17px
-$icon-mail-png-total-width: 275px
-$icon-mail-png-total-height: 245px
+$icon-mail-png-total-width: 290px
+$icon-mail-png-total-height: 237px
 $icon-mail-png-image: '../assets/icons/png/spritePNG.png'
-$icon-mail-png: (187px, 212px, -187px, -212px, 24px, 17px, 275px, 245px, '../assets/icons/png/spritePNG.png', 'iconMail-png', )
+$icon-mail-png: (257px, 201px, -257px, -201px, 24px, 17px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconMail-png', )
 $icon-phone-png-name: 'iconPhone-png'
-$icon-phone-png-x: 170px
-$icon-phone-png-y: 212px
-$icon-phone-png-offset-x: -170px
-$icon-phone-png-offset-y: -212px
+$icon-phone-png-x: 257px
+$icon-phone-png-y: 176px
+$icon-phone-png-offset-x: -257px
+$icon-phone-png-offset-y: -176px
 $icon-phone-png-width: 17px
 $icon-phone-png-height: 25px
-$icon-phone-png-total-width: 275px
-$icon-phone-png-total-height: 245px
+$icon-phone-png-total-width: 290px
+$icon-phone-png-total-height: 237px
 $icon-phone-png-image: '../assets/icons/png/spritePNG.png'
-$icon-phone-png: (170px, 212px, -170px, -212px, 17px, 25px, 275px, 245px, '../assets/icons/png/spritePNG.png', 'iconPhone-png', )
+$icon-phone-png: (257px, 176px, -257px, -176px, 17px, 25px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconPhone-png', )
 $icon-return-png-name: 'iconReturn-png'
-$icon-return-png-x: 33px
-$icon-return-png-y: 212px
-$icon-return-png-offset-x: -33px
-$icon-return-png-offset-y: -212px
+$icon-return-png-x: 257px
+$icon-return-png-y: 33px
+$icon-return-png-offset-x: -257px
+$icon-return-png-offset-y: -33px
 $icon-return-png-width: 32px
 $icon-return-png-height: 32px
-$icon-return-png-total-width: 275px
-$icon-return-png-total-height: 245px
+$icon-return-png-total-width: 290px
+$icon-return-png-total-height: 237px
 $icon-return-png-image: '../assets/icons/png/spritePNG.png'
-$icon-return-png: (33px, 212px, -33px, -212px, 32px, 32px, 275px, 245px, '../assets/icons/png/spritePNG.png', 'iconReturn-png', )
+$icon-return-png: (257px, 33px, -257px, -33px, 32px, 32px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconReturn-png', )
+$icon-unlimit-png-name: 'iconUnlimit-png'
+$icon-unlimit-png-x: 0px
+$icon-unlimit-png-y: 212px
+$icon-unlimit-png-offset-x: 0px
+$icon-unlimit-png-offset-y: -212px
+$icon-unlimit-png-width: 50px
+$icon-unlimit-png-height: 25px
+$icon-unlimit-png-total-width: 290px
+$icon-unlimit-png-total-height: 237px
+$icon-unlimit-png-image: '../assets/icons/png/spritePNG.png'
+$icon-unlimit-png: (0px, 212px, 0px, -212px, 50px, 25px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconUnlimit-png', )
 $icon-youtube-png-name: 'iconYoutube-png'
-$icon-youtube-png-x: 211px
-$icon-youtube-png-y: 212px
-$icon-youtube-png-offset-x: -211px
-$icon-youtube-png-offset-y: -212px
+$icon-youtube-png-x: 257px
+$icon-youtube-png-y: 218px
+$icon-youtube-png-offset-x: -257px
+$icon-youtube-png-offset-y: -218px
 $icon-youtube-png-width: 22px
 $icon-youtube-png-height: 16px
-$icon-youtube-png-total-width: 275px
-$icon-youtube-png-total-height: 245px
+$icon-youtube-png-total-width: 290px
+$icon-youtube-png-total-height: 237px
 $icon-youtube-png-image: '../assets/icons/png/spritePNG.png'
-$icon-youtube-png: (211px, 212px, -211px, -212px, 22px, 16px, 275px, 245px, '../assets/icons/png/spritePNG.png', 'iconYoutube-png', )
-$spritesheet-width: 275px
-$spritesheet-height: 245px
+$icon-youtube-png: (257px, 218px, -257px, -218px, 22px, 16px, 290px, 237px, '../assets/icons/png/spritePNG.png', 'iconYoutube-png', )
+$spritesheet-width: 290px
+$spritesheet-height: 237px
 $spritesheet-image: '../assets/icons/png/spritePNG.png'
-$spritesheet-sprites: ($icon-fb-png, $icon-tw-png, $icon-arrow-left-black-png, $icon-arrow-left-white-png, $icon-arrow-white-details-png, $icon-cart-png, $icon-chat-png, $icon-close-png, $icon-close-red-png, $icon-facebook-png, $icon-free-png, $icon-info-png, $icon-instagram-png, $icon-lifetime-png, $icon-location-png, $icon-mail-png, $icon-phone-png, $icon-return-png, $icon-youtube-png, )
-$spritesheet: (275px, 245px, '../assets/icons/png/spritePNG.png', $spritesheet-sprites, )
+$spritesheet-sprites: ($icon-fb-png, $icon-tw-png, $icon-arrow-left-black-png, $icon-arrow-left-white-png, $icon-arrow-white-details-png, $icon-cart-png, $icon-chat-png, $icon-close-png, $icon-close-red-png, $icon-facebook-png, $icon-free-png, $icon-info-png, $icon-instagram-png, $icon-lifetime-png, $icon-location-png, $icon-mail-png, $icon-phone-png, $icon-return-png, $icon-unlimit-png, $icon-youtube-png, )
+$spritesheet: (290px, 237px, '../assets/icons/png/spritePNG.png', $spritesheet-sprites, )
 
 // The provided mixins are intended to be used with the array-like variables
 //
