--- a/src/sass/sprite/webp/spriteWEBP.sass
+++ b/src/sass/sprite/webp/spriteWEBP.sass
@@ -15,10 +15,10 @@ $icon-fb-webp-offset-x: -212px
 $icon-fb-webp-offset-y: -90px
 $icon-fb-webp-width: 40px
 $icon-fb-webp-height: 40px
-$icon-fb-webp-total-width: 275px
-$icon-fb-webp-total-height: 245px
+$icon-fb-webp-total-width: 290px
+$icon-fb-webp-total-height: 237px
 $icon-fb-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-fb-webp: (212px, 90px, -212px, -90px, 40px, 40px, 275px, 245px, '../assets/icons/webp/spriteWEBP.webp', 'icon-fb-webp', )
+$icon-fb-webp: (212px, 90px, -212px, -90px, 40px, 40px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'icon-fb-webp', )
 $icon-tw-webp-name: 'icon-tw-webp'
 $icon-tw-webp-x: 212px
 $icon-tw-webp-y: 130px
@@ -26,10 +26,10 @@ $icon-tw-webp-offset-x: -212px
 $icon-tw-webp-offset-y: -130px
 $icon-tw-webp-width: 40px
 $icon-tw-webp-height: 40px
-$icon-tw-webp-total-width: 275px
-$icon-tw-webp-total-height: 245px
+$icon-tw-webp-total-width: 290px
+$icon-tw-webp-total-height: 237px
 $icon-tw-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-tw-webp: (212px, 130px, -212px, -130px, 40px, 40px, 275px, 245px, '../assets/icons/webp/spriteWEBP.webp', 'icon-tw-webp', )
+$icon-tw-webp: (212px, 130px, -212px, -130px, 40px, 40px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'icon-tw-webp', )
 $icon-arrow-left-black-webp-name: 'iconArrowLeftBlack-webp'
 $icon-arrow-left-black-webp-x: 212px
 $icon-arrow-left-black-webp-y: 0px
@@ -37,10 +37,10 @@ $icon-arrow-left-black-webp-offset-x: -212px
 $icon-arrow-left-black-webp-offset-y: 0px
 $icon-arrow-left-black-webp-width: 45px
 $icon-arrow-left-black-webp-height: 45px
-$icon-arrow-left-black-webp-total-width: 275px
-$icon-arrow-left-black-webp-total-height: 245px
+$icon-arrow-left-black-webp-total-width: 290px
+$icon-arrow-left-black-webp-total-height: 237px
 $icon-arrow-left-black-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-arrow-left-black-webp: (212px, 0px, -212px, 0px, 45px, 45px, 275px, 245px, '../assets/icons/webp/spriteWEBP.webp', 'iconArrowLeftBlack-webp', )
+$icon-arrow-left-black-webp: (212px, 0px, -212px, 0px, 45px, 45px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconArrowLeftBlack-webp', )
 $icon-arrow-left-white-webp-name: 'iconArrowLeftWhite-webp'
 $icon-arrow-left-white-webp-x: 212px
 $icon-arrow-left-white-webp-y: 45px
@@ -48,32 +48,32 @@ $icon-arrow-left-white-webp-offset-x: -212px
 $icon-arrow-left-white-webp-offset-y: -45px
 $icon-arrow-left-white-webp-width: 45px
 $icon-arrow-left-white-webp-height: 45px
-$icon-arrow-left-white-webp-total-width: 275px
-$icon-arrow-left-white-webp-total-height: 245px
+$icon-arrow-left-white-webp-total-width: 290px
+$icon-arrow-left-white-webp-total-height: 237px
 $icon-arrow-left-white-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-arrow-left-white-webp: (212px, 45px, -212px, -45px, 45px, 45px, 275px, 245px, '../assets/icons/webp/spriteWEBP.webp', 'iconArrowLeftWhite-webp', )
+$icon-arrow-left-white-webp: (212px, 45px, -212px, -45px, 45px, 45px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconArrowLeftWhite-webp', )
 $icon-arrow-white-details-webp-name: 'iconArrowWhiteDetails-webp'
-$icon-arrow-white-details-webp-x: 257px
-$icon-arrow-white-details-webp-y: 51px
-$icon-arrow-white-details-webp-offset-x: -257px
-$icon-arrow-white-details-webp-offset-y: -51px
+$icon-arrow-white-details-webp-x: 277px
+$icon-arrow-white-details-webp-y: 168px
+$icon-arrow-white-details-webp-offset-x: -277px
+$icon-arrow-white-details-webp-offset-y: -168px
 $icon-arrow-white-details-webp-width: 11px
 $icon-arrow-white-details-webp-height: 8px
-$icon-arrow-white-details-webp-total-width: 275px
-$icon-arrow-white-details-webp-total-height: 245px
+$icon-arrow-white-details-webp-total-width: 290px
+$icon-arrow-white-details-webp-total-height: 237px
 $icon-arrow-white-details-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-arrow-white-details-webp: (257px, 51px, -257px, -51px, 11px, 8px, 275px, 245px, '../assets/icons/webp/spriteWEBP.webp', 'iconArrowWhiteDetails-webp', )
+$icon-arrow-white-details-webp: (277px, 168px, -277px, -168px, 11px, 8px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconArrowWhiteDetails-webp', )
 $icon-cart-webp-name: 'iconCart-webp'
-$icon-cart-webp-x: 123px
-$icon-cart-webp-y: 212px
-$icon-cart-webp-offset-x: -123px
-$icon-cart-webp-offset-y: -212px
+$icon-cart-webp-x: 257px
+$icon-cart-webp-y: 124px
+$icon-cart-webp-offset-x: -257px
+$icon-cart-webp-offset-y: -124px
 $icon-cart-webp-width: 27px
 $icon-cart-webp-height: 27px
-$icon-cart-webp-total-width: 275px
-$icon-cart-webp-total-height: 245px
+$icon-cart-webp-total-width: 290px
+$icon-cart-webp-total-height: 237px
 $icon-cart-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-cart-webp: (123px, 212px, -123px, -212px, 27px, 27px, 275px, 245px, '../assets/icons/webp/spriteWEBP.webp', 'iconCart-webp', )
+$icon-cart-webp: (257px, 124px, -257px, -124px, 27px, 27px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconCart-webp', )
 $icon-chat-webp-name: 'iconChat-webp'
 $icon-chat-webp-x: 0px
 $icon-chat-webp-y: 0px
@@ -81,43 +81,43 @@ $icon-chat-webp-offset-x: 0px
 $icon-chat-webp-offset-y: 0px
 $icon-chat-webp-width: 212px
 $icon-chat-webp-height: 212px
-$icon-chat-webp-total-width: 275px
-$icon-chat-webp-total-height: 245px
+$icon-chat-webp-total-width: 290px
+$icon-chat-webp-total-height: 237px
 $icon-chat-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-chat-webp: (0px, 0px, 0px, 0px, 212px, 212px, 275px, 245px, '../assets/icons/webp/spriteWEBP.webp', 'iconChat-webp', )
+$icon-chat-webp: (0px, 0px, 0px, 0px, 212px, 212px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconChat-webp', )
 $icon-close-webp-name: 'iconClose-webp'
-$icon-close-webp-x: 95px
-$icon-close-webp-y: 212px
-$icon-close-webp-offset-x: -95px
-$icon-close-webp-offset-y: -212px
+$icon-close-webp-x: 257px
+$icon-close-webp-y: 97px
+$icon-close-webp-offset-x: -257px
+$icon-close-webp-offset-y: -97px
 $icon-close-webp-width: 28px
 $icon-close-webp-height: 27px
-$icon-close-webp-total-width: 275px
-$icon-close-webp-total-height: 245px
+$icon-close-webp-total-width: 290px
+$icon-close-webp-total-height: 237px
 $icon-close-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-close-webp: (95px, 212px, -95px, -212px, 28px, 27px, 275px, 245px, '../assets/icons/webp/spriteWEBP.webp', 'iconClose-webp', )
+$icon-close-webp: (257px, 97px, -257px, -97px, 28px, 27px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconClose-webp', )
 $icon-close-red-webp-name: 'iconCloseRed-webp'
-$icon-close-red-webp-x: 257px
-$icon-close-red-webp-y: 18px
-$icon-close-red-webp-offset-x: -257px
-$icon-close-red-webp-offset-y: -18px
+$icon-close-red-webp-x: 274px
+$icon-close-red-webp-y: 176px
+$icon-close-red-webp-offset-x: -274px
+$icon-close-red-webp-offset-y: -176px
 $icon-close-red-webp-width: 16px
 $icon-close-red-webp-height: 16px
-$icon-close-red-webp-total-width: 275px
-$icon-close-red-webp-total-height: 245px
+$icon-close-red-webp-total-width: 290px
+$icon-close-red-webp-total-height: 237px
 $icon-close-red-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-close-red-webp: (257px, 18px, -257px, -18px, 16px, 16px, 275px, 245px, '../assets/icons/webp/spriteWEBP.webp', 'iconCloseRed-webp', )
+$icon-close-red-webp: (274px, 176px, -274px, -176px, 16px, 16px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconCloseRed-webp', )
 $icon-facebook-webp-name: 'iconFacebook-webp'
-$icon-facebook-webp-x: 257px
-$icon-facebook-webp-y: 34px
-$icon-facebook-webp-offset-x: -257px
-$icon-facebook-webp-offset-y: -34px
+$icon-facebook-webp-x: 277px
+$icon-facebook-webp-y: 151px
+$icon-facebook-webp-offset-x: -277px
+$icon-facebook-webp-offset-y: -151px
 $icon-facebook-webp-width: 10px
 $icon-facebook-webp-height: 17px
-$icon-facebook-webp-total-width: 275px
-$icon-facebook-webp-total-height: 245px
+$icon-facebook-webp-total-width: 290px
+$icon-facebook-webp-total-height: 237px
 $icon-facebook-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-facebook-webp: (257px, 34px, -257px, -34px, 10px, 17px, 275px, 245px, '../assets/icons/webp/spriteWEBP.webp', 'iconFacebook-webp', )
+$icon-facebook-webp: (277px, 151px, -277px, -151px, 10px, 17px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconFacebook-webp', )
 $icon-free-webp-name: 'iconFree-webp'
 $icon-free-webp-x: 212px
 $icon-free-webp-y: 170px
@@ -125,103 +125,114 @@ $icon-free-webp-offset-x: -212px
 $icon-free-webp-offset-y: -170px
 $icon-free-webp-width: 40px
 $icon-free-webp-height: 31px
-$icon-free-webp-total-width: 275px
-$icon-free-webp-total-height: 245px
+$icon-free-webp-total-width: 290px
+$icon-free-webp-total-height: 237px
 $icon-free-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-free-webp: (212px, 170px, -212px, -170px, 40px, 31px, 275px, 245px, '../assets/icons/webp/spriteWEBP.webp', 'iconFree-webp', )
+$icon-free-webp: (212px, 170px, -212px, -170px, 40px, 31px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconFree-webp', )
 $icon-info-webp-name: 'iconInfo-webp'
-$icon-info-webp-x: 0px
-$icon-info-webp-y: 212px
-$icon-info-webp-offset-x: 0px
-$icon-info-webp-offset-y: -212px
+$icon-info-webp-x: 257px
+$icon-info-webp-y: 0px
+$icon-info-webp-offset-x: -257px
+$icon-info-webp-offset-y: 0px
 $icon-info-webp-width: 33px
 $icon-info-webp-height: 33px
-$icon-info-webp-total-width: 275px
-$icon-info-webp-total-height: 245px
+$icon-info-webp-total-width: 290px
+$icon-info-webp-total-height: 237px
 $icon-info-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-info-webp: (0px, 212px, 0px, -212px, 33px, 33px, 275px, 245px, '../assets/icons/webp/spriteWEBP.webp', 'iconInfo-webp', )
+$icon-info-webp: (257px, 0px, -257px, 0px, 33px, 33px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconInfo-webp', )
 $icon-instagram-webp-name: 'iconInstagram-webp'
-$icon-instagram-webp-x: 257px
-$icon-instagram-webp-y: 0px
-$icon-instagram-webp-offset-x: -257px
-$icon-instagram-webp-offset-y: 0px
+$icon-instagram-webp-x: 50px
+$icon-instagram-webp-y: 212px
+$icon-instagram-webp-offset-x: -50px
+$icon-instagram-webp-offset-y: -212px
 $icon-instagram-webp-width: 18px
 $icon-instagram-webp-height: 18px
-$icon-instagram-webp-total-width: 275px
-$icon-instagram-webp-total-height: 245px
+$icon-instagram-webp-total-width: 290px
+$icon-instagram-webp-total-height: 237px
 $icon-instagram-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-instagram-webp: (257px, 0px, -257px, 0px, 18px, 18px, 275px, 245px, '../assets/icons/webp/spriteWEBP.webp', 'iconInstagram-webp', )
+$icon-instagram-webp: (50px, 212px, -50px, -212px, 18px, 18px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconInstagram-webp', )
 $icon-lifetime-webp-name: 'iconLifetime-webp'
-$icon-lifetime-webp-x: 65px
-$icon-lifetime-webp-y: 212px
-$icon-lifetime-webp-offset-x: -65px
-$icon-lifetime-webp-offset-y: -212px
+$icon-lifetime-webp-x: 257px
+$icon-lifetime-webp-y: 65px
+$icon-lifetime-webp-offset-x: -257px
+$icon-lifetime-webp-offset-y: -65px
 $icon-lifetime-webp-width: 30px
 $icon-lifetime-webp-height: 32px
-$icon-lifetime-webp-total-width: 275px
-$icon-lifetime-webp-total-height: 245px
+$icon-lifetime-webp-total-width: 290px
+$icon-lifetime-webp-total-height: 237px
 $icon-lifetime-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-lifetime-webp: (65px, 212px, -65px, -212px, 30px, 32px, 275px, 245px, '../assets/icons/webp/spriteWEBP.webp', 'iconLifetime-webp', )
+$icon-lifetime-webp: (257px, 65px, -257px, -65px, 30px, 32px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconLifetime-webp', )
 $icon-location-webp-name: 'iconLocation-webp'
-$icon-location-webp-x: 150px
-$icon-location-webp-y: 212px
-$icon-location-webp-offset-x: -150px
-$icon-location-webp-offset-y: -212px
+$icon-location-webp-x: 257px
+$icon-location-webp-y: 151px
+$icon-location-webp-offset-x: -257px
+$icon-location-webp-offset-y: -151px
 $icon-location-webp-width: 20px
 $icon-location-webp-height: 25px
-$icon-location-webp-total-width: 275px
-$icon-location-webp-total-height: 245px
+$icon-location-webp-total-width: 290px
+$icon-location-webp-total-height: 237px
 $icon-location-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-location-webp: (150px, 212px, -150px, -212px, 20px, 25px, 275px, 245px, '../assets/icons/webp/spriteWEBP.webp', 'iconLocation-webp', )
+$icon-location-webp: (257px, 151px, -257px, -151px, 20px, 25px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconLocation-webp', )
 $icon-mail-webp-name: 'iconMail-webp'
-$icon-mail-webp-x: 187px
-$icon-mail-webp-y: 212px
-$icon-mail-webp-offset-x: -187px
-$icon-mail-webp-offset-y: -212px
+$icon-mail-webp-x: 257px
+$icon-mail-webp-y: 201px
+$icon-mail-webp-offset-x: -257px
+$icon-mail-webp-offset-y: -201px
 $icon-mail-webp-width: 24px
 $icon-mail-webp-height: 17px
-$icon-mail-webp-total-width: 275px
-$icon-mail-webp-total-height: 245px
+$icon-mail-webp-total-width: 290px
+$icon-mail-webp-total-height: 237px
 $icon-mail-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-mail-webp: (187px, 212px, -187px, -212px, 24px, 17px, 275px, 245px, '../assets/icons/webp/spriteWEBP.webp', 'iconMail-webp', )
+$icon-mail-webp: (257px, 201px, -257px, -201px, 24px, 17px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconMail-webp', )
 $icon-phone-webp-name: 'iconPhone-webp'
-$icon-phone-webp-x: 170px
-$icon-phone-webp-y: 212px
-$icon-phone-webp-offset-x: -170px
-$icon-phone-webp-offset-y: -212px
+$icon-phone-webp-x: 257px
+$icon-phone-webp-y: 176px
+$icon-phone-webp-offset-x: -257px
+$icon-phone-webp-offset-y: -176px
 $icon-phone-webp-width: 17px
 $icon-phone-webp-height: 25px
-$icon-phone-webp-total-width: 275px
-$icon-phone-webp-total-height: 245px
+$icon-phone-webp-total-width: 290px
+$icon-phone-webp-total-height: 237px
 $icon-phone-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-phone-webp: (170px, 212px, -170px, -212px, 17px, 25px, 275px, 245px, '../assets/icons/webp/spriteWEBP.webp', 'iconPhone-webp', )
+$icon-phone-webp: (257px, 176px, -257px, -176px, 17px, 25px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconPhone-webp', )
 $icon-return-webp-name: 'iconReturn-webp'
-$icon-return-webp-x: 33px
-$icon-return-webp-y: 212px
-$icon-return-webp-offset-x: -33px
-$icon-return-webp-offset-y: -212px
+$icon-return-webp-x: 257px
+$icon-return-webp-y: 33px
+$icon-return-webp-offset-x: -257px
+$icon-return-webp-offset-y: -33px
 $icon-return-webp-width: 32px
 $icon-return-webp-height: 32px
-$icon-return-webp-total-width: 275px
-$icon-return-webp-total-height: 245px
+$icon-return-webp-total-width: 290px
+$icon-return-webp-total-height: 237px
 $icon-return-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-return-webp: (33px, 212px, -33px, -212px, 32px, 32px, 275px, 245px, '../assets/icons/webp/spriteWEBP.webp', 'iconReturn-webp', )
+$icon-return-webp: (257px, 33px, -257px, -33px, 32px, 32px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconReturn-webp', )
+$icon-unlimit-webp-name: 'iconUnlimit-webp'
+$icon-unlimit-webp-x: 0px
+$icon-unlimit-webp-y: 212px
+$icon-unlimit-webp-offset-x: 0px
+$icon-unlimit-webp-offset-y: -212px
+$icon-unlimit-webp-width: 50px
+$icon-unlimit-webp-height: 25px
+$icon-unlimit-webp-total-width: 290px
+$icon-unlimit-webp-total-height: 237px
+$icon-unlimit-webp-image: '../assets/icons/webp/spriteWEBP.webp'
+$icon-unlimit-webp: (0px, 212px, 0px, -212px, 50px, 25px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconUnlimit-webp', )
 $icon-youtube-webp-name: 'iconYoutube-webp'
-$icon-youtube-webp-x: 211px
-$icon-youtube-webp-y: 212px
-$icon-youtube-webp-offset-x: -211px
-$icon-youtube-webp-offset-y: -212px
+$icon-youtube-webp-x: 257px
+$icon-youtube-webp-y: 218px
+$icon-youtube-webp-offset-x: -257px
+$icon-youtube-webp-offset-y: -218px
 $icon-youtube-webp-width: 22px
 $icon-youtube-webp-height: 16px
-$icon-youtube-webp-total-width: 275px
-$icon-youtube-webp-total-height: 245px
+$icon-youtube-webp-total-width: 290px
+$icon-youtube-webp-total-height: 237px
 $icon-youtube-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-youtube-webp: (211px, 212px, -211px, -212px, 22px, 16px, 275px, 245px, '../assets/icons/webp/spriteWEBP.webp', 'iconYoutube-webp', )
-$spritesheet-width: 275px
-$spritesheet-height: 245px
+$icon-youtube-webp: (257px, 218px, -257px, -218px, 22px, 16px, 290px, 237px, '../assets/icons/webp/spriteWEBP.webp', 'iconYoutube-webp', )
+$spritesheet-width: 290px
+$spritesheet-height: 237px
 $spritesheet-image: '../assets/icons/webp/spriteWEBP.webp'
-$spritesheet-sprites: ($icon-fb-webp, $icon-tw-webp, $icon-arrow-left-black-webp, $icon-arrow-left-white-webp, $icon-arrow-white-details-webp, $icon-cart-webp, $icon-chat-webp, $icon-close-webp, $icon-close-red-webp, $icon-facebook-webp, $icon-free-webp, $icon-info-webp, $icon-instagram-webp, $icon-lifetime-webp, $icon-location-webp, $icon-mail-webp, $icon-phone-webp, $icon-return-webp, $icon-youtube-webp, )
-$spritesheet: (275px, 245px, '../assets/icons/webp/spriteWEBP.webp', $spritesheet-sprites, )
+$spritesheet-sprites: ($icon-fb-webp, $icon-tw-webp, $icon-arrow-left-black-webp, $icon-arrow-left-white-webp, $icon-arrow-white-details-webp, $icon-cart-webp, $icon-chat-webp, $icon-close-webp, $icon-close-red-webp, $icon-facebook-webp, $icon-free-webp, $icon-info-webp, $icon-instagram-webp, $icon-lifetime-webp, $icon-location-webp, $icon-mail-webp, $icon-phone-webp, $icon-return-webp, $icon-unlimit-webp, $icon-youtube-webp, )
+$spritesheet: (290px, 237px, '../assets/icons/webp/spriteWEBP.webp', $spritesheet-sprites, )
 
 // The provided mixins are intended to be used with the array-like variables
 //
